# rewind-frontend

./: .envrc  .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js  to-rm.json  vercel.json
assets/: global.css  tailwind.css
assets/styling/: checkbox.css
nix/: flake.nix
src/: helpers.rs  main.rs
src/api/: boards.rs  lists.rs  mod.rs  tags.rs  tasks.rs
src/components/: accordion.rs  button.rs  card.rs  dialog.rs  dropdown.rs  fetch.rs  footer.rs  hover_card.rs  input.rs  label.rs  mod.rs  modal.rs  navbar.rs  radio_group.rs  search_dropdown.rs  select.rs  table.rs  textarea.rs  theme_toggle.rs
src/components.old/: button.rs  checkbox.rs  combobox.rs  label.rs  layout.rs  mod.rs  navbar.rs  select.rs  table.rs
src/components.old/fetch/: boards.rs  mod.rs  tags.rs  tasks.rs
src/components.old/icons/: add.rs  contrast.rs  label.rs  mod.rs  status.rs
src/components.old/models/: boards.rs  lists.rs  tasks.rs
src/components/board/: mod.rs  model.rs  row.rs
src/components/fetch/: boards.rs  lists.rs  mod.rs  tasks.rs
src/components/icons/: add.rs  arrow.rs  cross.rs  mod.rs  more.rs  search.rs  settings.rs  status.rs
src/context/: boards.rs  lists.rs  mod.rs  tags.rs  task_tags.rs  tasks.rs  theme.rs
src/hooks/: mod.rs  use_board_add.rs  use_board_delete.rs  use_board_drag_switch.rs  use_board_update.rs  use_boards_get.rs  use_click_outside.rs  use_list_add.rs  use_list_delete.rs  use_list_drag_switch.rs  use_list_update.rs  use_lists_get.rs  use_tag_add.rs  use_tag_delete.rs  use_tag_update.rs  use_tags_get.rs  use_task_add.rs  use_task_delete.rs  use_task_drag_switch.rs  use_task_tag_link.rs  use_task_tag_unlink.rs  use_task_tags_get.rs  use_task_update.rs  use_tasks_get.rs  use_theme_switch.rs
src/models/: board.rs  dark_mode.rs  list.rs  mod.rs  priority.rs  status.rs  tag.rs  task.rs  task_tag.rs
src/views/: board.rs  boards.rs  footer.rs  home.rs  lists.rs  mod.rs  navbar.rs  tasks.rs
src/views.old/: footer.rs  navbar.rs
(+47 files in other folders)
