[package]
name = "rewind-front"
version = "0.1.0"
authors = ["wallago <45556867+wallago@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dioxus = { version = "0.6.0", features = ["router", "web"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["DomTokenList"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
