[package]
name = "rewind-front"
version = "0.1.0"
authors = ["wallago <45556867+wallago@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
daisy_rsx = "0.1.38"
dioxus = { version = "0.6.0", features = ["router", "web"] }
dioxus-lib = "0.6.2"
dioxus-material = "0.3.0"
dioxus-free-icons = { version = "0.9", features = [
  "font-awesome-solid",
  "font-awesome-regular",
] }
dotenvy = "0.15.7"
futures-timer = "3.0.3"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["DomTokenList", "Storage"] }
regex = "1.11.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
